Wed Sep  3 10:04:46 2008  Koichi Sasada  <ko1@atdot.net>

	* mvm.c, eval.c, ruby.c, vm.c, vm_core.h: pass "make test".

Mon Sep  1 11:31:49 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb (copy_stream, fu_copy_stream0, copy_file): use
	  IO.copy_stream to get rid of extraneous conversion.

Mon Sep  1 11:31:26 2008  Koichi Sasada  <ko1@atdot.net>

	* mvm.c: added.

	* common.mk: ditto.

	* eval.c, eval_intern.h, include/ruby/intern.h, include/ruby/mvm.h,
	  include/ruby/public_object.h, include/ruby/ruby.h, io.c, main.c,
	  main.c, pack.c, ruby.c, thread.c, thread_pthread.c,
	  thread_pthread.h, vm.c, vm_core.h: fix Ruby/MVM API.
	  On this commit, only miniruby is built, but not working.

Mon Sep  1 02:55:15 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* strftime.c (rb_strftime): calc timezone offset by myself if system
	  doesn't provide timezone info.

Mon Sep  1 02:48:28 2008  Tanaka Akira  <akr@fsij.org>

	* tool/transcode-tblgen.rb: change "illegal" to "invalid".

Mon Sep  1 02:31:16 2008  Tanaka Akira  <akr@fsij.org>

	* tool/transcode-tblgen.rb (transcode_generated_code): defined for
	  generating table at once.
	  (transcode_tblgen): returns an empty string.
	  (transcode_generate_node): ditto.

	* enc/trans/newline.trans: use transcode_generated_code.

	* enc/trans/iso2022.trans: ditto.

	* enc/trans/single_byte.trans: ditto.

	* enc/trans/utf_16_32.trans: ditto.

	* enc/trans/japanese.trans: ditto.

	* enc/trans/korean.trans: ditto.

Mon Sep  1 02:10:03 2008  Tanaka Akira  <akr@fsij.org>

	* tool/transcode-tblgen.rb (citrus_decode_mapsrc): print logging
	  message on STDERR.

Mon Sep  1 01:24:09 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/trans/eucjp-tbl.rb: replace by previous Citrus maps.

	* enc/trans/sjis-tble.rb: ditto.

Mon Sep  1 01:18:26 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/transcode-tblgen.rb: add table generator from Citrus maps.

	* enc/trans/japanese.trans: use Citrus maps.
